--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Mail-DataFeed-Abusix
 
 {{$NEXT}}
+    - Avoid a warning
 
 1.20181128 2018-11-28 15:19:10+11:00 Australia/Melbourne
     - First release
