--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Mail-DataFeed-Abusix
 
 {{$NEXT}}
+  - Switch to a purely numeric version string
 
 1.20200617.1 2020-06-17 23:01:27+00:00 UTC
   - Allow time to be passed in
